# graphqlcpp

./: .cproject  .gitignore  .project  CMakeLists.txt  Doxyfile  LICENSE  README.md  build.sh  kitchen-sink.json  test.json
Debug/: HelloWorld  makefile  sources.mk
Debug/src/: .gitignore  HelloWorld.d  subdir.mk
Debug/src/libgraphqlparser/: Ast.d  GraphQLParser.d  JsonVisitor.d  dump_json_ast.d  lexer.d  parser.tab.d  subdir.mk
Debug/src/libgraphqlparser/c/: GraphQLAst.d  GraphQLAstNode.d  GraphQLAstToJSON.d  GraphQLAstVisitor.d  GraphQLParser.d  subdir.mk
doxygen/html/: _argument_not_valid_exception_8h_source.html  _graph_ql_d_t_o_multi_root_8h_source.html  _graph_ql_d_t_o_single_root_8h_source.html  _graphql_cpp_api_8h_source.html  _i_graph_ql_d_t_o_8h_source.html  _i_graph_ql_resolver_8h_source.html  _invalid_request_exception_8h_source.html  _invalid_schema_exception_8h_source.html  _my_serializer_8h_source.html  _my_serializer_child_8h_source.html  _my_serializer_root_8h_source.html  _my_writer_8h_source.html  _no_query_set_exception_8h_source.html  _no_schema_set_exception_8h_source.html  _query_validator_8h.html  _query_validator_8h__dep__incl.map  _query_validator_8h__dep__incl.md5  _query_validator_8h__incl.map  _query_validator_8h__incl.md5  _query_validator_8h_source.html  _request_ast_wrapper_8h_source.html  _request_dispatcher_8h_source.html  _resolver_argument_8h_source.html  _resolver_info_8h_source.html  _resolver_manager_8h_source.html  _schema_ast_wraper_8h_source.html  _schema_validator_8h_source.html  _wrong_operation_exception_8h_source.html  annotated.html  class_resolver_argument-members.html  class_resolver_argument.html  classes.html  classgraphqlcpp_1_1_request_ast_wrapper-members.html  classgraphqlcpp_1_1_request_ast_wrapper.html  classgraphqlcpp_1_1_resolver_info-members.html  classgraphqlcpp_1_1_resolver_info.html  classgraphqlcpp_1_1api_1_1_graph_ql_d_t_o_multi_root-members.html  classgraphqlcpp_1_1api_1_1_graph_ql_d_t_o_multi_root.html  classgraphqlcpp_1_1api_1_1_graph_ql_d_t_o_multi_root__coll__graph.map  classgraphqlcpp_1_1api_1_1_graph_ql_d_t_o_multi_root__coll__graph.md5  (+125 more)
doxygen/html/search/: all_0.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  files_0.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_7.js  functions_8.js  functions_9.js  functions_b.js  namespaces_0.js  searchdata.js  variables_0.js  variables_1.js
gtest/: gtest-all.cc
include/graphqlcpp/: GraphQlDTOMultiRoot.h  GraphQlDTOSingleRoot.h  GraphqlCppApi.h  IGraphQlDTO.h  RequestAstWrapper.h
include/graphqlcpp/dispatcher/: RequestDispatcher.h
include/graphqlcpp/exceptions/: ArgumentNotValidException.h  InvalidRequestException.h  InvalidSchemaException.h  NoQuerySetException.h  NoSchemaSetException.h  WrongOperationException.h
include/graphqlcpp/resolver/: IGraphQlResolver.h  ResolverArgument.h  ResolverInfo.h  ResolverManager.h
include/graphqlcpp/utils/: MySerializer.h  MySerializerChild.h  MySerializerRoot.h  MyWriter.h
include/graphqlcpp/validators/: QueryValidator.h  SchemaAstWraper.h  SchemaValidator.h
src/: ApiFactory.cpp  ApiFactory.h  App.cpp  CMakeLists.txt  Demo.cpp  Demo.h  GraphqlCppApi.cpp  GraphqlCppApi.h  HelloWorld.cpp  ResolverInfo.cpp  ResolverInfo.h  SchemaValidator.cpp  SchemaValidator.h
src/graphqlcpp/: ApiFactory.cpp  ApiFactory.h  CMakeLists.txt  GraphqlCppApi.cpp  IGraphQlDTO.cpp  IGraphQlDTO.h  RequestAstWrapper.cpp  Serializer.cpp  Serializer.h
src/graphqlcpp/api/: GraphqlCppApi.cpp  GraphqlCppApi.h
src/graphqlcpp/dispatcher/: RequestDispatcher.cpp
src/graphqlcpp/exceptions/: NoSchemaSetException.h
src/graphqlcpp/resolver/: IGraphQlResolver.cpp  ResolverArgument.cpp  ResolverInfo.cpp  ResolverManager.cpp
src/graphqlcpp/utils/: MySerializer.cpp  MySerializerChild.cpp  MySerializerRoot.cpp  MyWriter.cpp  StringUtils.cpp
src/graphqlcpp/validators/: QueryValidator.cpp  QueryValidator.h  SchemaAstWraper.cpp  SchemaAstWraper.h  SchemaValidator.cpp
src/graphqlparser/: Ast.cpp  AstVisitor.h  CMakeLists.txt  GraphQLParser.cpp  JsonVisitor.cpp  JsonVisitor.h  dump_json_ast.cpp  lexer.cpp  parser.tab.hpp
src/graphqlparser/c/: GraphQLAst.cpp  GraphQLAstNode.cpp  GraphQLAstToJSON.cpp  GraphQLParser.cpp
src/libgraphqlcpp/: ApiFactory.cpp  GraphqlCppApi.cpp  GraphqlCppApi.h
src/libgraphqlcpp/exceptions/: ArgumentNotValidException.h  InvalidQueryException.h
src/libgraphqlcpp/validators/: QueryValidator.cpp  QueryValidator.h  SchemaAstWraper.cpp  SchemaAstWraper.h  SchemaValidator.h
src/libgraphqlparser/: Ast.cpp  Ast.h  Makefile  dump_json_ast  dump_json_ast.cpp
src/test/: GraphqlCppApiTest.cpp  JsonVisitorTests.cpp  JulianTests.cpp  ParserTests.cpp  test_all.cpp
tests/: CMakeLists.txt
tests/basic_tests/: CMakeLists.txt  DtoAndSerializerTest.cpp  GraphQlResolverTestData.cpp  GraphqlCppApiTest.cpp  IntegrationTests.cpp  JsonLibTests.cpp  JsonVisitorTests.cpp  JulianTests.cpp  ParserTests.cpp  QueryValidatorTests.cpp  RequestAstWrapperTest.cpp  RequestDispatcherTest.cpp  ResManagerTest.cpp  ResolverManagerTest.cpp  SchemaAstWrapperTest.cpp  TestData.cpp  test_all.cpp
tests/basic_tests/data/: CMakeLists.txt  schema-test-user.graphql
